# mcp-server-legifrance

./: .env.example  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
src/: __init__.py  app.py  client.py  config.py  mcp_server.py  server.py
src/config/: __init__.py  logging.py  server.py  settings.py  tools_config.yml
src/prompts/: __init__.py  prompt_templates.yml  prompts.py
src/services/: api_client.py
src/tools/: __init__.py  legifrance_tools.py  tools.py
src/utils/: __init__.py  utils.py
tests/: conftest.py  test_client.py  test_config.py  test_yaml_config.py
tests/integration/: conftest.py
tests/integration/services/: test_api_client.py
