[project]
name = "mcp-server-legifrance"
version = "0.1.0"
description = "MCP server pour legifrance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "httpx>=0.27.0",
    "load-dotenv>=0.1.0",
    "mcp[cli]>=1.7.0",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "tenacity>=8.2.3",
    "typer>=0.15.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
