[project]
name = "mcp-server-legifrance"
version = "0.1.0"
description = "MCP server pour legifrance"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.8",
    "httpx>=0.27.0",
    "load-dotenv>=0.1.0",
    "mcp[cli]>=1.7.0",
    "pydantic>=2.11.4",
    "requests>=2.32.3",
    "tenacity>=8.2.3",
    "typer>=0.15.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.5",
]

[tool.ruff]
# Same as Black
line-length = 88
# Enable autofix for all enabled rules (where possible)
fix = true

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), and more
select = ["E", "F", "I", "W", "N", "B", "C4", "UP", "RUF"]
ignore = []
# Allow autofix for all enabled rules (when `--fix`) is provided
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
